# proyecto-ps-2026a

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/core/: backend.h  backup_manager.h  backupworker.h  command_console.h  common.h  download_manager.h  downloadworker.h  file_shell.h  filesearchworker.h  process_manager.h  system_monitor.h
include/gui/: MainWindow.h
src/: main.cpp
src/core/: backend.c  backup_manager.c  command_console.c  download_manager.c  file_shell.c  process_manager.c  system_monitor.c
src/gui/: MainWindow.cpp  main.cpp  mainwidow.cpp  mainwindow.h  mainwindow.ui
